# traintastic-cs-firmware

./: .editorconfig  CMakeLists.txt  README.md
.github/workflows/: build.yml
doc/: protocol.md
src/: config.hpp  main.cpp
src/s88/: s88.cpp  s88.hpp  s88.pio
src/traintasticcs/: direction.hpp  input.cpp  input.hpp  messages.hpp  traintasticcs.cpp  traintasticcs.hpp  types.hpp
src/traintasticcs/throttle/: channel.hpp
src/utils/: bit.hpp  byte.hpp  endian.hpp  time.hpp
src/xpressnet/: xpressnet.cpp  xpressnet.hpp  xpressnet.pio
